# sqlai

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  todo.md
backend/alembic/: env.py
backend/alembic/versions/: 2aa497d652c1_create_semantic_prompt_cache_table.py  8d96ae018cfc_add_chat_messages1.py  a48d40e0a52a_create_projects_and_datasets_tables.py  b89191620373_add_schema_snapshot.py  d92ffaa40ee1_add_chat_messages.py  dc0098b9b550_add_schema_snapshot.py
backend/app/: main.py
backend/app/api/v1/: cache.py  chat.py  datasets.py  projects.py  query.py  test.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/database/: models.py  session.py
backend/app/services/: cache.py  dataframe.py  duckdb.py  embedding.py  query.py  redis.py  storage.py  upload.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProjectTest.tsx  QueryTest.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/data-stage/: DataStagePanel.tsx  VirtualizedGrid.tsx
frontend/src/components/sidebar/: DatasetList.tsx  NewProjectForm.tsx  ProjectListItem.tsx  ProjectSidebar.tsx  UploadCsvButton.tsx  UploadOverlay.tsx
frontend/src/layouts/: AppShell.tsx  TopNav.tsx
frontend/src/lib/: api.ts  endpoints.ts  store.ts  types.ts
