[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "boto3>=1.43.36",
    "cryptography>=49.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.138.1",
    "polars>=1.42.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "sqlglot>=30.11.0",
    "uvicorn>=0.49.0",
]
